KRIPTON-22: Bind to Database
Task-Url: http://xsvn:8080/jira/browse/KRIPTON-22